apps/base/phpmyadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/ssl-redirect: "true"
    nginx.org/redirect-to-https: "true"
    nginx.org/client-max-body-size: "64m"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [dbadmin.jit.services]
      secretName: phpmyadmin-tls
  rules:
    - host: dbadmin.jit.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
